# FastAPI-ReactJS-LoginRegisterApp

./: .gitignore
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  users.py
backend/app/model/: person.py
backend/app/repository/: base_repo.py
backend/app/service/: auth_service.py  users.py
backend/migrations/versions/: 12f21532a54b_initial_migration.py  45a5e4d6ed33_initial_migration.py
frontend/: package-lock.json  package.json
frontend/src/: Home.js
frontend/src/form/: Forgot.js  Login.js  Register.js
