[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Romario Jashari <rxjash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "1.4.41"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
pydantic = "^1.10.5"
alembic = "^1.9.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"